lang/examples/good/02-04-logical-operators.wdr
fun main(): Void {
  printBool(True || False);
  printBool(True && False);

  printBool(!True);
  printBool(!False);

  printInt(4 >= 2 || 3 != 2);

  return;
}