lang/examples/bad/02-02-comparison.wdr
fun main(): Void {
  printInt(4 <=== 2);
  printInt(4 << 2);

  printInt(4 >>= 2);
  printInt(4 >< 2);

  printInt(4 === 2);
  printInt(4 ==! 4);
  printInt(4 !=! 2);

  return;
}